--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,13 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Thu Oct 19 10:12:13 MSK 2017
+#Tue Oct 31 17:30:13 MSK 2017
+systemProp.http.proxyPort=3128
+systemProp.http.proxyUser=nuzhdin
+systemProp.http.proxyPassword=Cock5ter
 org.gradle.jvmargs=-Xmx1536m
-
+systemProp.https.proxyPassword=Cock5ter
+systemProp.https.proxyHost=vm-squid.rosenergo.com
+systemProp.http.proxyHost=vm-squid.rosenergo.com
+systemProp.https.proxyPort=3128
+systemProp.https.proxyUser=nuzhdin
